--- a/DockerProject/DockerProject.csproj
+++ b/DockerProject/DockerProject.csproj
@@ -16,9 +16,17 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Restaurants\Create.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Restaurants\Details.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Restaurants\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Categories\Index.cshtml" />
   </ItemGroup>
 
 </Project>
